fix: navbar mobile wrap

--- a/sass/globals.sass
+++ b/sass/globals.sass
@@ -290,7 +290,7 @@ footer.footerBox
                             &:hover
                                 color: $font
 
-@media screen and (max-width: 1010px)
+@media screen and (max-width: 1084px)
     nav.navBox
         & div.container
             & ul
@@ -303,7 +303,7 @@ footer.footerBox
                         &:not(:last-child)
                             margin-right: 20px
 
-@media screen and (max-width: 720px)
+@media screen and (max-width: 877px)
     nav.navBox
         & div.container
             & ul
@@ -324,7 +324,7 @@ footer.footerBox
                 & div.card:not(:first-child)
                     margin-top: 30px
 
-@media screen and (max-width: 680px)
+@media screen and (max-width: 790px)
     nav.navBox
         & div.container
             & ul
